v3.0.10 - in progress
	* Fixed xbee_frameWait()
	* Fixed libxbee::Con::Tx() - now throws a libxbee::xbee_etx
	* xbee_conRx() can now be called to just get the number of packets in the buffer
	* Added C++ compatibility with byte vectors

v3.0.9 - 29 Apr 2013
	* Fixed high baudrate corruption issues
	* Added a timestamp from clock_gettime() to all incoming packets
	* Fixed broken ifdef around timespec definition
	* Improved performance when locating a Frame ID
	* Fixed a corner-case where timeouts occur prematurely if the packet transmission is delayed
	* Added 'Sensor' connection type for XBee Series 2 modules
	* Implemented fundamental xbeeZB support - ZDO, etc will need to be implemented separately for now
	* Enhanced C++ usability
	* Added xbee_conTypeGet()
	* Added support for a larger range of standard baud rates on Linux and BSD
	* Added support for arbitrary baud rates on Linux and BSD (see config.mk to enable)
	* xbee_conTx() and relations now return XBEE_ETIMEOUT directly instead of via the retVal parameter
	* Improved handling of Tx status frames

v3.0.8 - 24 Dec 2012
	* Fixed analog input values
	* Improved logging format for large data blocks
	* Added coloring for tx/rx events in the log to help with debugging
	* Network interface now exchanges the server's mode as well
	* I/O packets now have the extra metadata when running as a network client
	* Added xbee_dataSet() and xbee_dataGet() functions

v3.0.7 - 14 Jun 2012
	* Fixed initialization of frame mutexes
	* Abstracted serial I/O further for Win32 port
	* General tidy of codebase
	* Added HTML documentation
	* Renamed internal ll_* functions to xbee_ll_* to avoid conflicts when statically linking
	* Fixed incorrect xbee_conTx() and xbee_convTx() behavior (was adding a '\0' byte)
	* Fixed bug in AT tx & rx handlers
	* Added support for XBee Series 5 modules
	* Added xbee_conRxWait()
	* Re-designed C++ class and build C++ library - libxbeep.so

v3.0.6 - 25 Mar 2012
	* Added C++ class