@@ -23,6 +23,7 @@ struct xbee_conSettings {
         /* libxbee options: */
         unsigned char noBlock;
         unsigned char catchAll;
+        unsigned char noWaitForAck;
         
         /* generic options: */
         unsigned char queueChanges; /* for AT connections */
@@ -129,6 +130,6 @@ Attie Grande &lt;<A HREF="mailto:attie@attie.co.uk">attie@attie.co.uk</A>&gt;
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 14:13:07 GMT, February 07, 2013
+Time: 19:13:20 GMT, May 01, 2013
 </BODY>
 </HTML>
