@@ -28,6 +28,7 @@ struct xbee_conSettings {
 	/* libxbee options: */
 	unsigned char noBlock;
 	unsigned char catchAll;
+	unsigned char noWaitForAck;
 	
 	/* generic options: */
 	unsigned char queueChanges; /* for AT connections */
