@@ -3,6 +3,7 @@ v3.0.10 - in progress
 	* Fixed libxbee::Con::Tx() - now throws a libxbee::xbee_etx
 	* xbee_conRx() can now be called to just get the number of packets in the buffer
 	* Added C++ compatibility with byte vectors
+	* Added noWaitForAck flag so that xbee_conTx() will return straight away - useful for AT connections
 
 v3.0.9 - 29 Apr 2013
 	* Fixed high baudrate corruption issues
